2010-09-15  Piotr Fusik  <fox@scene.pl>
* java/ASAPMIDlet.java, java/ASAP.ppjava, asap.c: removed "small streams" code
  because I can't make it play smoothly


2010-09-02  Piotr Fusik  <fox@scene.pl>
* csharp/SilverASAP.cs: the problem with fast clicks in Opera hopefully fixed

* audacious/asapplug.c, Makefile, README, INSTALL, PORTS.xml:
  created Audacious plugin


2010-08-25  Piotr Fusik  <fox@scene.pl>
* asap_sdl.c, win32/Makefile: simple command-line player using SDL


2010-08-24  Piotr Fusik  <fox@scene.pl>
* javascript/asap2wav.ppjs, README, INSTALL: added support for JaegerMonkey


2010-08-20  Piotr Fusik  <fox@scene.pl>
* javascript/asap2wav.ppjs, javascript/Makefile, README:
  added support for JScript .NET


2010-08-19  Piotr Fusik  <fox@scene.pl>
* javascript/asap2wav.ppjs, README, PORTS.xml: added support for Google V8 shell


2010-08-17  Piotr Fusik  <fox@scene.pl>
* javascript/asap2wav.ppjs, README, PORTS.xml: added support for Rhino Shell


2010-08-16  Piotr Fusik  <fox@scene.pl>
* asap.spec, Makefile, win32/Makefile: build RPM for Linux

* win32/Makefile, win32/apollo/ASAP_Apollo.cpp, win32/shellex/ASAPShellEx.cpp,
  win32/wasap/wasap.c: prevented gcc 4.5.0 warnings

* win32/Makefile: added SilverASAP to www

* csharp/SilverASAP.cs: lots of fast "Play" clicks could start multiple songs
  (reported by Slaves)

* java/Makefile: re-compress *.jar with 7-Zip


2010-08-15  Piotr Fusik  <fox@scene.pl>
* java/asap2wav.MF, java/asap_midlet.MF: added "Manifest-Version"


2010-07-11  Piotr Fusik  <fox@scene.pl>
* csharp/SilverASAP.cs: double-clicking "Play" in Opera could start two songs
  playing simultaneously (reported by Slaves)


2010-07-05  Piotr Fusik  <fox@scene.pl>
* csharp/SilverASAP.cs, csharp/AppManifest.xaml, csharp/ASAP.ppcs,
  csharp/Makefile, anylang.h, README, PORTS.xml: Silverlight player


2010-07-03  Piotr Fusik  <fox@scene.pl>
* flash/Makefile, flash/ASAP.ppas, flash/ASAP_ModuleInfo.as:
  documentation comments

